# autoverse

./: .gitignore  devenv.nix  justfile
service/: Cargo.toml
service/src/: main.rs
simulator/: Cargo.toml  Dioxus.toml
simulator/src/: error.rs  grid.rs  main.rs  model.rs
simulator/src/model/: lenia.rs
